syntax = "proto3";

package docker_control;

option go_package = "github.com/shipkit/docker-control/proto";

service DockerControlService {
  rpc StartCompose(StartComposeRequest) returns (ActionResult);
  
  rpc StopApp(StopAppRequest) returns (ActionResult);
  
  rpc RestartApp(RestartAppRequest) returns (ActionResult);
  
  rpc UpdateCompose(UpdateComposeRequest) returns (ActionResult);
  
  rpc GetStatus(GetStatusRequest) returns (AppStatus);
}

message StartComposeRequest {
  string uuid = 1;
  string compose_yaml = 2;
}

message StopAppRequest {
  string uuid = 1;
}

message RestartAppRequest {
  string uuid = 1;
}

message UpdateComposeRequest {
  string uuid = 1;
  string compose_yaml = 2;
}

message GetStatusRequest {
  string uuid = 1;
}

message ActionResult {
  bool success = 1;
  string message = 2;
  string error_code = 3;
}

message AppStatus {
  string uuid = 1;
  AppState state = 2;
  repeated ContainerStatus containers = 3;
  string message = 4;
}

enum AppState {
  UNKNOWN = 0;
  RUNNING = 1;
  STOPPED = 2;
  STARTING = 3;
  STOPPING = 4;
  ERROR = 5;
}

message ContainerStatus {
  string name = 1;
  string state = 2;
  string health = 3;
  repeated string ports = 4;
}